# clion-homework-cookiecutter

./: README.md  cookiecutter.json
{{cookiecutter.project_name}}/: CMakeLists.txt  main.cpp
{{cookiecutter.project_name}}/tests/: test1.cpp  testmain.cpp
